--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         }
     },
     "require-dev": {
+        "laravel/homestead": "^8.1",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
